added Huddle Lading Page

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <a href="./newbie—Single Price/index.html">Single Price Project</a>
         <a href="./newbie—Four Cards/index.html">Four Cards Project</a>
         <a href="./newbie—Testimonials Slider/">Testimonials</a>
+        <a href="./newbie—Huddle Landing/index.html">Huddle Landing Page</a>
         <a href="./junior—Insure/index.html">Insure Project</a>
     </div>
 </body>
