social media dashboard added

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
         <a href="./newbie—Base Apparel/index.html">Base Apparel Project</a>
         <a href="./newbie—Single Price/index.html">Single Price Project</a>
         <a href="./newbie—Four Cards/index.html">Four Cards Project</a>
-        <a href="./newbie—Testimonials Slider/">Testimonials</a>
+        <a href="./newbie—Testimonials Slider/index.html">Testimonials</a>
         <a href="./newbie—Huddle Landing/index.html">Huddle Landing Page</a>
         <a href="./junior—Insure/index.html">Insure Project</a>
+        <a href="./junior—Social Media Dashboard/index.html">Social Media Dashboard</a>
     </div>
 </body>
 </html>
