edits of alignments

--- a/junior—Social Media Dashboard/index.html
+++ b/junior—Social Media Dashboard/index.html
@@ -34,46 +34,69 @@
 
     <section class="accounts-grid">
       <div class="fb-followers followers-grid">
-        <p class='user-name'><span><img src="./images/icon-facebook.svg" alt="Facebook Logo"></span>@nathanf</p>
+        <div class="user">
+          <img src="./images/icon-facebook.svg" alt="Facebook Logo">
+          <p class='user-name'>@nathanf</p>
+        </div>
         <p class="followers-count">1987</p>
         <p class="followers">Followers</p>
-        <p class="today-count"><span><img src="./images/icon-up.svg" alt="arrow"></span>12 Today</p>
+        <div class="arrow-img">
+          <img src="./images/icon-up.svg" alt="arrow">
+          <p class="today-count">12 Today</p>
+        </div>
       </div>
       <div class="tw-followers followers-grid">
-        <p class='user-name'><span><img src="./images/icon-twitter.svg" alt="Twitter Logo"></span>@nathanf</p>
+        <div class="user">
+          <img src="./images/icon-twitter.svg" alt="Twitter Logo">
+          <p class='user-name'>@nathanf</p>
+        </div>
         <p class="followers-count">1044</p>
         <p class="followers">Followers</p>
-        <p class="today-count"><span><img src="./images/icon-up.svg" alt="arrow"></span>99 Today</p>
+        <div class="arrow-img">
+          <img src="./images/icon-up.svg" alt="arrow">
+          <p class="today-count">99 Today</p>
+        </div>
       </div>
       <div class="in-followers followers-grid">
-        <p class='user-name'><span><img src="./images/icon-instagram.svg" alt="Instagram Logo"></span>@realnathanf</p>
+        <div class="user">
+          <img src="./images/icon-instagram.svg" alt="Instagram Logo">
+          <p class='user-name'>@realnathanf</p>
+        </div>
         <p class="followers-count">11k</p>
         <p class="followers">Followers</p>
-        <p class="today-count"><span><img src="./images/icon-up.svg" alt="arrow"></span>1099 Today</p>
+        <div class="arrow-img">
+          <img src="./images/icon-up.svg" alt="arrow">
+          <p class="today-count">1099 Today</p>
+        </div>
       </div>
       <div class="yt-followers followers-grid">
-        <p class='user-name'><span><img src="./images/icon-youtube.svg" alt="YouTube Logo"></span>Nathan F.</p>
+        <div class="user">
+          <img src="./images/icon-youtube.svg" alt="YouTube Logo">
+          <p class='user-name'>Nathan F.</p>
+        </div>
         <p class="followers-count">8239</p>
         <p class="followers">Subscribers</p>
-        <p class="today-count red"><span><img src="./images/icon-down.svg" alt="arrow"></span>144 Today</p>
+        <div class="arrow-img">
+          <img src="./images/icon-down.svg" alt="arrow">
+          <p class="today-count red">144 Today</p>
+        </div>
       </div>
     </section>
 
     <section class="overview">
-
       <p class="overview-title">Overview - Today</p>
-
       <div class="overview-grid">
-
         <div class="fb-data grid-data">
-
           <div class="left">
             <p class="data-title">Page Views</p>
             <div class="count">87</div>
           </div>
           <div class="right">
             <img src="./images/icon-facebook.svg" alt="">
-            <p class="data-avg"><span><img src="./images/icon-up.svg" alt="arrow"></span>3%</p>
+            <div class="arrow-img">
+              <img src="./images/icon-up.svg" alt="arrow">
+              <p class="data-avg">3%</p>
+            </div>
           </div>
         </div>
         <div class="fb-data grid-data">
@@ -83,7 +106,10 @@
           </div>
           <div class="right">
             <img src="./images/icon-facebook.svg" alt="">
-            <p class="data-avg red"><span><img src="./images/icon-down.svg" alt="arrow"></span>2%</p>
+            <div class="arrow-img">
+              <img src="./images/icon-down.svg" alt="arrow">
+              <p class="data-avg red">2%</p>
+            </div>
           </div>      
         </div>
         <div class="in-data grid-data">
@@ -92,8 +118,11 @@
             <div class="count">5462</div>
           </div>
           <div class="right">
-            <img src="./images/icon-instagram.svg" alt="">
-            <p class="data-avg"><span><img src="./images/icon-up.svg" alt="arrow"></span>2257%</p>
+            <img src="./images/icon-instagram.svg" alt="Instagram logo">
+            <div class="arrow-img">
+              <img src="./images/icon-up.svg" alt="arrow">
+              <p class="data-avg">2257%</p>
+            </div>
           </div>
         </div>
         <div class="in-data grid-data">
@@ -103,7 +132,11 @@
           </div>
           <div class="right">
             <img src="./images/icon-instagram.svg" alt="">
-            <p class="data-avg"><span><img src="./images/icon-up.svg" alt="arrow"></span>1375%</p>
+
+            <div class="arrow-img">
+              <img src="./images/icon-up.svg" alt="arrow">
+              <p class="data-avg">1375%</p>
+            </div>
           </div>
         </div>
         <div class="tw-data grid-data">
@@ -113,7 +146,11 @@
           </div>
           <div class="right">
             <img src="./images/icon-twitter.svg" alt="">
-            <p class="data-avg"><span><img src="./images/icon-up.svg" alt="arrow"></span>303%</p>
+
+            <div class="arrow-img">
+              <img src="./images/icon-up.svg" alt="arrow">
+              <p class="data-avg">303%</p>
+            </div>
           </div>
         </div>
         <div class="tw-data grid-data">
@@ -123,7 +160,11 @@
           </div>
           <div class="right">
             <img src="./images/icon-twitter.svg" alt="">
-            <p class="data-avg"><span><img src="./images/icon-up.svg" alt="arrow"></span>553%</p>
+
+            <div class="arrow-img">
+              <img src="./images/icon-up.svg" alt="arrow">
+              <p class="data-avg">553%</p>
+            </div>  
           </div>
         </div>
         <div class="yt-data grid-data">
@@ -133,7 +174,11 @@
           </div>
           <div class="right">
             <img src="./images/icon-youtube.svg" alt="">
-            <p class="data-avg red"><span><img src="./images/icon-down.svg" alt="arrow"></span>19%</p>
+
+            <div class="arrow-img">
+              <img src="./images/icon-down.svg" alt="arrow">
+              <p class="data-avg red">19%</p>
+            </div>
           </div>
         </div>
         <div class="yt-data grid-data">
@@ -143,7 +188,11 @@
           </div>
           <div class="right">
             <img src="./images/icon-youtube.svg" alt="">
-            <p class="data-avg red"><span><img src="./images/icon-down.svg" alt="arrow"></span>12%</p>
+
+            <div class="arrow-img">
+              <img src="./images/icon-down.svg" alt="arrow">
+              <p class="data-avg red">12%</p>
+            </div>
           </div>
         </div>
       </div>
