added grid / imgs

--- a/index.html
+++ b/index.html
@@ -1,32 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rafael's FrontendMentor Projects</title>
-    <style>
-        .container {
-            margin: 0 auto;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .container > a {
-            padding: 1rem;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <a href="./newbie—Base Apparel/index.html">Base Apparel Project</a>
-        <a href="./newbie—Single Price/index.html">Single Price Project</a>
-        <a href="./newbie—Four Cards/index.html">Four Cards Project</a>
-        <a href="./newbie—Testimonials Slider/index.html">Testimonials</a>
-        <a href="./newbie—Huddle Landing/index.html">Huddle Landing Page</a>
-        <a href="./junior—Insure/index.html">Insure Project</a>
-        <a href="./junior—Social Media Dashboard/index.html">Social Media Dashboard</a>
-    </div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Rafael's FrontendMentor Projects</title>
+		<link rel="stylesheet" href="style.css" />
+	</head>
+	<body>
+		<h1>FrontendMentor.io Design Showcase</h1>
+		<h4>
+			FrontendMentor.io is an online community that offers challenges varying in
+			difficulty. I have taken a few of their challenges to pracitce my design,
+			layout, and styling. Check out their
+			<a href="https://www.frontendmentor.io/">website</a>
+		</h4>
+		<div class="container">
+			<div class="project-tile">
+				<img src="assets/base-apparel.png" alt="" />
+				<a href="./newbie—Base Apparel/index.html">Base Apparel Project</a>
+			</div>
+			<div class="project-tile">
+				<img src="assets/single-price.png" alt="" />
+				<a href="./newbie—Single Price/index.html">Single Price Project</a>
+			</div>
+			<div class="project-tile">
+				<img src="assets/four-cards.png" alt="" />
+				<a href="./newbie—Four Cards/index.html">Four Cards Project</a>
+			</div>
+			<div class="project-tile">
+				<img src="assets/testimonials.png" alt="" />
+				<a href="./newbie—Testimonials Slider/index.html">Testimonials</a>
+			</div>
+			<div class="project-tile">
+				<img src="assets/huddle.png" alt="" />
+				<a href="./newbie—Huddle Landing/index.html">Huddle Landing Page</a>
+			</div>
+			<div class="project-tile">
+				<img src="assets/social-media-dashboard.png" alt="" />
+				<a href="./junior—Social Media Dashboard/index.html"
+					>Social Media Dashboard</a
+				>
+			</div>
+		</div>
+	</body>
 </html>
