last edits on page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Rafael's FrontendMentor Projects</title>
 		<link rel="stylesheet" href="style.css" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
 		<h1>FrontendMentor.io Design Showcase</h1>
@@ -12,32 +16,42 @@
 			FrontendMentor.io is an online community that offers challenges varying in
 			difficulty. I have taken a few of their challenges to pracitce my design,
 			layout, and styling. Check out their
-			<a href="https://www.frontendmentor.io/">website</a>
+			<a href="https://www.frontendmentor.io/" target="_blank">website</a>
 		</h4>
 		<div class="container">
 			<div class="project-tile">
 				<img src="assets/base-apparel.png" alt="" />
-				<a href="./newbie—Base Apparel/index.html">Base Apparel Project</a>
+				<a href="./newbie—Base Apparel/index.html" target="_blank"
+					>Base Apparel Project</a
+				>
 			</div>
 			<div class="project-tile">
 				<img src="assets/single-price.png" alt="" />
-				<a href="./newbie—Single Price/index.html">Single Price Project</a>
+				<a href="./newbie—Single Price/index.html" target="_blank"
+					>Single Price Project</a
+				>
 			</div>
 			<div class="project-tile">
 				<img src="assets/four-cards.png" alt="" />
-				<a href="./newbie—Four Cards/index.html">Four Cards Project</a>
+				<a href="./newbie—Four Cards/index.html" target="_blank"
+					>Four Cards Project</a
+				>
 			</div>
 			<div class="project-tile">
 				<img src="assets/testimonials.png" alt="" />
-				<a href="./newbie—Testimonials Slider/index.html">Testimonials</a>
+				<a href="./newbie—Testimonials Slider/index.html" target="_blank"
+					>Testimonials</a
+				>
 			</div>
 			<div class="project-tile">
 				<img src="assets/huddle.png" alt="" />
-				<a href="./newbie—Huddle Landing/index.html">Huddle Landing Page</a>
+				<a href="./newbie—Huddle Landing/index.html" target="_blank"
+					>Huddle Landing Page</a
+				>
 			</div>
 			<div class="project-tile">
 				<img src="assets/social-media-dashboard.png" alt="" />
-				<a href="./junior—Social Media Dashboard/index.html"
+				<a href="./junior—Social Media Dashboard/index.html" target="_blank"
 					>Social Media Dashboard</a
 				>
 			</div>
