Finished RPS App

--- a/index.html
+++ b/index.html
@@ -20,6 +20,24 @@
 		</h4>
 		<div class="container">
 			<div class="project-tile">
+				<img src="assets/rps.png" alt="Rock Paper Scissors React Advanced" />
+				<a href="./advanced—rps/index.html" target="_blank"
+					>Rock Paper Scissors Advanced</a
+				>
+			</div>
+			<div class="project-tile">
+				<img src="assets/social-media-dashboard.png" alt="Social Media Dashboard Vanilla JavaScript" />
+				<a href="./junior—Social Media Dashboard/index.html" target="_blank"
+					>Social Media Dashboard</a
+				>
+			</div>
+			<div class="project-tile">
+				<img src="assets/testimonials.png" alt="Testimonils Slider vanilla JavaScript" />
+				<a href="./newbie—Testimonials Slider/index.html" target="_blank"
+					>Testimonials</a
+				>
+			</div>
+			<div class="project-tile">
 				<img src="assets/base-apparel.png" alt="" />
 				<a href="./newbie—Base Apparel/index.html" target="_blank"
 					>Base Apparel Project</a
@@ -38,23 +56,11 @@
 				>
 			</div>
 			<div class="project-tile">
-				<img src="assets/testimonials.png" alt="" />
-				<a href="./newbie—Testimonials Slider/index.html" target="_blank"
-					>Testimonials</a
-				>
-			</div>
-			<div class="project-tile">
 				<img src="assets/huddle.png" alt="" />
 				<a href="./newbie—Huddle Landing/index.html" target="_blank"
 					>Huddle Landing Page</a
 				>
-			</div>
-			<div class="project-tile">
-				<img src="assets/social-media-dashboard.png" alt="" />
-				<a href="./junior—Social Media Dashboard/index.html" target="_blank"
-					>Social Media Dashboard</a
-				>
-			</div>
+			</div>		
 		</div>
 	</body>
 </html>
