--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div class="container">
 			<div class="project-tile">
 				<img src="assets/rps.png" alt="Rock Paper Scissors React Advanced" />
-				<a href="./advanced—rps/index.html" target="_blank"
+				<a href="./advanced—rps/public/index.html" target="_blank"
 					>Rock Paper Scissors Advanced</a
 				>
 			</div>
